# scim-hangul-debian

./: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure  scim-hangul.spec  scim-hangul_0.3.2.orig.tar.gz.delta  scim-hangul_0.3.2.orig.tar.gz.id  scim-hangul_0.4.0.orig.tar.gz.delta  scim-hangul_0.4.0.orig.tar.gz.id
data/: Makefile.in
debian/: changelog  control  copyright  docs  install  rules  watch
debian/patches/: 00list  10_missing-header.dpatch  include-unistd.patch  series
m4/: Makefile.in
po/: ChangeLog  de.gmo  fr.gmo  ja.gmo  ko.gmo  nl.gmo  pa.gmo  zh_CN.gmo
skim/: Makefile.in  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  subdirs
skim/admin/: cvs.sh
skim/admin/CVS/: Entries  Repository  Root
skim/icons/: Makefile.in
skim/po/: Makefile.in  de.gmo  fr.gmo  it.gmo  ja.gmo  ko.gmo  nl.gmo  pa.gmo  zh_CN.gmo  zh_TW.gmo
skim/setupui/: Makefile.in  scim_hangul.cpp  scim_hangul.h  scim_hangul_ui.cpp  scim_hangul_ui.h
src/: Makefile.in
