dnl =======================================================
dnl FILE: ./admin/configure.in.min
dnl =======================================================

dnl    This file is part of the KDE libraries/packages
dnl    Copyright (C) 2001 Stephan Kulow (coolo@kde.org)
 
dnl    This file is free software; you can redistribute it and/or
dnl    modify it under the terms of the GNU Library General Public
dnl    License as published by the Free Software Foundation; either
dnl    version 2 of the License, or (at your option) any later version.
 
dnl    This library is distributed in the hope that it will be useful,
dnl    but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl    Library General Public License for more details.
 
dnl    You should have received a copy of the GNU Library General Public License
dnl    along with this library; see the file COPYING.LIB.  If not, write to
dnl    the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
dnl    Boston, MA 02111-1307, USA.

# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4) dnl a source file from your sub dir

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

dnl This ksh/zsh feature conflicts with `cd blah ; pwd`
unset CDPATH

dnl Checking host/target/build systems, for make, install etc.
AC_CANONICAL_SYSTEM 
dnl Perform program name transformation
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(skim-scim-hangul, 0.3.2) dnl searches for some needed programs

KDE_SET_PREFIX

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

dnl Checks for programs.
AC_CHECK_COMPILERS
AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)
KDE_PROG_LIBTOOL

dnl for NLS support. Call them in this order!
dnl WITH_NLS is for the po files
AM_KDE_WITH_NLS

KDE_USE_QT($REQUIRED_KDE_VERSION)
AC_PATH_KDE
dnl =======================================================
dnl FILE: configure.in.in
dnl =======================================================

REQUIRED_KDE_VERSION=3.2.0
#MIN_CONFIG($REQUIRED_KDE_VERSION)
##AC_CONFIG_SRCDIR(src/main.cpp)
dnl PACKAGE set before

REQUIRED_SCIM_VERSION=1.3.0

PKG_CHECK_MODULES(SCIM, [scim >= $REQUIRED_SCIM_VERSION],
			[HAS_SCIM=yes],
			[HAS_SCIM=no])

AC_SUBST(REQUIRED_KDE_VERSION)
AC_SUBST(REQUIRED_SCIM_VERSION)

if test "x$HAS_SCIM" != "xyes"; then
  AC_MSG_ERROR([SCIM library is not available or the version is too old!])
else
  SCIM_VERSION=`$PKG_CONFIG --modversion scim`
fi

##dnl PACKAGE set before
AM_GNU_GETTEXT([external])

###########################################################
##             Definiation of compile args.              ##
###########################################################
AC_ARG_ENABLE(scim-debug,
              [  --enable-scim-debug            Turn on debugging],
              scim_debug=yes,
              scim_debug=no)

if test "$scim_debug" = "yes"; then
  AC_DEFINE(ENABLE_DEBUG,1,[Define this to enable the debug facility in scim-panel-lib])
  CFLAGS="$CFLAGS -g"
  CXXFLAGS="$CXXFLAGS -g"
else
  AC_DEFINE(ENABLE_DEBUG,0)
fi

#AC_CHECK_HEAD
AC_C_BIGENDIAN
AC_CHECK_KDEMAXPATHLEN

##AC_OUTPUT
REQUIRED_SKIM_VERSION=1.3.0
dnl skim probably has been installed under prefix=$KDEDIR, so add it to search path of pkgconfig
kde_libsuffix=`kde-config --libsuffix`
test -z "$KDEDIR" && KDEDIR=`kde-config --prefix`
export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:$KDEDIR/lib${kde_libsuffix}/pkgconfig
PKG_CHECK_MODULES(SKIM, [skim >= $REQUIRED_SKIM_VERSION],
                        [HAS_SKIM=yes],
                        [HAS_SKIM=no])

if test "x$HAS_SKIM" = "xyes"; then

PKG_CHECK_MODULES(SCIM_KDEUTILS,[scim_kdeutils >= $REQUIRED_SKIM_VERSION],
                                [HAS_KDEUTILS=yes],
                                [HAS_KDEUTILS=no])

  if test "x$HAS_KDEUTILS" = "xyes"; then
        SKIM_VERSION=`$PKG_CONFIG --modversion skim`
        SCIM_PINYIN_ENABLE_SKIM_SUPPORT=1
        skim_prefix=`$PKG_CONFIG --variable=prefix skim`
	skim_libdir=`$PKG_CONFIG --variable=libdir skim`
        AC_SUBST(skim_prefix)
	AC_SUBST(skim_libdir)
	##we need to overwrite prefix with the same prefix of which skim was installed to
	prefix=$skim_prefix
	libdir=$skim_libdir
	##this is to get rid of the last warning
	given_prefix=$skim_prefix
  fi
else
  AC_MSG_ERROR([skim library is not available or the version is too old!])
fi
KDE_CREATE_SUBDIRSLIST
AC_CONFIG_FILES([ Makefile ])
AC_CONFIG_FILES([ icons/Makefile ])
AC_CONFIG_FILES([ po/Makefile ])
AC_CONFIG_FILES([ setupui/Makefile ])
AC_OUTPUT
AC_MSG_RESULT([
skim Support Build options:
  Version                $VERSION
  Version of libscim     $SCIM_VERSION
  Version of libskim     $SKIM_VERSION
  Install prefix         $prefix
  Build shared libs      $enable_shared
  Build static libs      $enable_static
  Enable debug           $scim_debug
])
# Check if KDE_SET_PREFIX was called, and --prefix was passed to configure
if test -n "$kde_libs_prefix" -a -n "$given_prefix"; then
  # And if so, warn when they don't match
  if test "$kde_libs_prefix" != "$given_prefix"; then
    # And if kde doesn't know about the prefix yet
    echo ":"`kde-config --path exe`":" | grep ":$given_prefix/bin/:" 2>&1 >/dev/null
    if test $? -ne 0; then
      echo ""
      echo "Warning: you chose to install this package in $given_prefix,"
      echo "but KDE was found in $kde_libs_prefix."
      echo "For this to work, you will need to tell KDE about the new prefix, by ensuring"
      echo "that KDEDIRS contains it, e.g. export KDEDIRS=$given_prefix:$kde_libs_prefix"
      echo "Then restart KDE."
      echo ""
    fi
  fi
fi

if test "$all_tests" = "bad"; then
  if test ! "$cache_file" = "/dev/null"; then
    echo ""
    echo "Please remove the file $cache_file after changing your setup"
    echo "so that configure will find the changes next time."
    echo ""
  fi
else
  echo ""
  echo "Good - your configure finished. Start make now"
  echo ""
fi
